--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+motor==3.3.1
 networkx==3.4.2
 numpy==2.1.3
 packaging==24.2
@@ -41,5 +42,4 @@ typing_extensions==4.12.2
 uvicorn==0.32.0
 watchfiles==0.24.0
 websockets==14.1
-langchain==0.3.41 
-
+langchain==0.3.41
